--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                     <a class="nav-link" href="#"><i class="fa-solid fa-bell"></i> </a>
                     <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
                     <a class="nav-link" href="#"><i class="fa-solid fa-bars"></i></a>
-                </div>
             </div>
             <img src="" alt="موقع المكياج الأول في اليمن image">
         </div>
@@ -109,8 +108,8 @@
                                 <h5 class="card-title">Card title</h5>
                             </div>
                         </div>
-                        <div class="card col-md-3 d-md-block d-none ">
-                            <img src="images/rounded Image Carousel/4.png" class="card-img-top mx-auto" alt="...">
+                        <div class="card col-md-3 d-md-inline-flex d-none">
+                            <img src="images/rounded Image Carousel/1.png" class="card-img-top mx-auto" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
                             </div>
@@ -137,7 +136,7 @@
                                 <h5 class="card-title">Card title</h5>
                             </div>
                         </div>
-                        <div class="card card col-md-3 d-md-block d-none ">
+                        <div class="card card col-md-3 d-md-inline-flex d-none ">
                             <img src="images/rounded Image Carousel/8.png" class="card-img-top mx-auto" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
@@ -165,7 +164,7 @@
                                 <h5 class="card-title">Card title</h5>
                             </div>
                         </div>
-                        <div class="card col-md-3 d-md-block d-none">
+                        <div class="card col-md-3 d-md-inline-flex d-none">
                             <img src="images/rounded Image Carousel/4.png" class="card-img-top mx-auto" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
@@ -870,7 +869,8 @@
                 data-bs-slide="next">
                 <i class="fa-solid fa-chevron-right"></i>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#ProductCarouselId1" data-bs-slide="prev">
+            <button class="carousel-control-next" type="button" data-bs-target="#ProductCarouselId1"
+                data-bs-slide="prev">
                 <i class=" fa-solid fa-chevron-left"></i>
             </button>
         </div>
@@ -1534,7 +1534,8 @@
                 data-bs-slide="next">
                 <i class="fa-solid fa-chevron-right"></i>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#ProductCarouselId2" data-bs-slide="prev">
+            <button class="carousel-control-next" type="button" data-bs-target="#ProductCarouselId2"
+                data-bs-slide="prev">
                 <i class=" fa-solid fa-chevron-left"></i>
             </button>
         </div>
@@ -1605,7 +1606,7 @@
                                 <h5 class="card-title">Card title</h5>
                             </div>
                         </div>
-                        <div class="card col-md-3 d-md-block d-none ">
+                        <div class="card col-md-3 d-md-inline-flex d-none ">
                             <img src="images/rounded Image Carousel/4.png" class="card-img-top mx-auto" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
@@ -1633,7 +1634,7 @@
                                 <h5 class="card-title">Card title</h5>
                             </div>
                         </div>
-                        <div class="card card col-md-3 d-md-block d-none ">
+                        <div class="card card col-md-3 d-md-inline-flex d-none ">
                             <img src="images/rounded Image Carousel/8.png" class="card-img-top mx-auto" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
@@ -1661,7 +1662,7 @@
                                 <h5 class="card-title">Card title</h5>
                             </div>
                         </div>
-                        <div class="card col-md-3 d-md-block d-none">
+                        <div class="card col-md-3 d-md-inline-flex d-none">
                             <img src="images/rounded Image Carousel/4.png" class="card-img-top mx-auto" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
@@ -1902,7 +1903,7 @@
                             <div class="card col-md-2 d-md-block d-none">
                                 <a href="product.html">
                                     <img src="images/rounded Image Carousel/6.png" class="card-img-top mx-auto "
-                                        alt="..." >
+                                        alt="...">
                                     <div class="card-body text-start p-0 pt-2">
                                         <h5 class="card-title">
                                             <span class="">Top Face</span>
