--- a/product.html
+++ b/product.html
@@ -106,45 +106,114 @@
                     </div>
                     <div class="row">
                         <div class="col-4">
-
                         </div>
                         <div class="col-8">
                             <div class="row" style="border-bottom: 3px solid grey;">
-                            <div class="col-6">
-                                <div class="center">
-                                    <p>
-                                    </p>
-                                    <div class="input-group">
-                                        <span class="input-group-btn">
-                                            <button type="button" class="btn btn-default btn-number" data-type="minus"
-                                                data-field="quant[1]">
-                                                <i class="fa-solid fa-minus"></i>
-                                            </button>
-                                        </span>
-                                        <input type="text" name="quant[1]" class="form-control input-number" value="8"
-                                            min="8" max="30">
-                                        <span class="input-group-btn">
-                                            <button type="button" class="btn btn-default btn-number" data-type="plus"
-                                                data-field="quant[1]">
-                                                <i class="fa-solid fa-plus"></i>
-                                            </button>
-                                        </span>
+                                <div class="col-6">
+                                    <div class="center">
+                                        <p>
+                                        </p>
+                                        <div class="input-group">
+                                            <span class="input-group-btn">
+                                                <button type="button" class="btn btn-default btn-number"
+                                                    data-type="minus" data-field="quant[1]">
+                                                    <i class="fa-solid fa-minus"></i>
+                                                </button>
+                                            </span>
+                                            <input type="text" name="quant[1]" class="form-control input-number"
+                                                value="8" min="8" max="30">
+                                            <span class="input-group-btn">
+                                                <button type="button" class="btn btn-default btn-number"
+                                                    data-type="plus" data-field="quant[1]">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                </button>
+                                            </span>
+                                        </div>
+                                        <p>
+                                        </p>
                                     </div>
-                                    <p>
-                                    </p>
+                                </div>
+                                <div class="col-6">
+                                    <button type="button" class="btn addToCart">أضف الى السلّة</button>
                                 </div>
                             </div>
-                            <div class="col-6">
-                                <button type="button" class="btn addToCart">أضف الى السلّة</button>
-                            </div>
-                        </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 col-12">
+                <div class="col-md-5 col-12 deepDetails">
+                    <div class="row">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-4">
+                                    <img src="images/Essence logo.webp" class="img-fluid rounded-start"
+                                        alt="Essence logo">
+                                </div>
+                                <div class="col-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title original">أصلي 100%</h5>
+                                        <p class="card-text moreBrand">إضغط هنا للمزيد من ماركة <span><a href="#brand">
+                                                    Essence </a></span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-5">
+                        <div class="col-12">
+                            <h5>
+                                <b>ماسكرا اي لوف اكستريم كريزي فوليوم من ايسنس:</b>
+                            </h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <select class="form-select" aria-label="Default select example">
+                                <option selected>إختر عملة بلدك </option>
+                                <option value="1">
+                                    <img src="images/flags/yemen.png" alt="" style="z-index: 2;">
+                        </div>
+                        </option>
+                        <option value="2" style="background-image:url(images/flags/saudi\ arabia.png);">
+                            ريال سعودي
 
+                        </option>
+                        </select>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card CardPrice mb-3 mt-5">
+                        <div class="row g-0">
+                            <div class="col-5 Price">
+                                <p class="before"><s> 120 ريال </s></p>
+                                <p class="after">90 ريال </p>
+
+                            </div>
+                            <div class="col-6">
+                                <div class="card-body ">
+                                    <p class="card-text Sale my-auto">- 40%</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row text-center ProductSize">
+                    <h6><b>تحديد الخيارات:</b> حجم 400ml</h6>
+                    <br>
+                    <div class="col-12 mt-3">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox1"  name="inlineRadioOptions" checked>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox2"  name="inlineRadioOptions">
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="inlineCheckbox3"  name="inlineRadioOptions" >
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -1028,7 +1097,8 @@
 </body>
 
 <script src="assets/js/jquery-3.5.1.min.js"></script>
-<script src="assets/js/bootstrap.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/all.js"></script>
 
 </html>
