--- a/product.html
+++ b/product.html
@@ -48,9 +48,11 @@
                         <li class="list-group-item"><i class="fa-solid fa-mortar-pestle me-3"></i> الأجهزة <span
                                 class="float-end"><i class="fa-solid fa-chevron-left"></i> </span></li>
                         <li class="list-group-item"><i class="fa-solid fa-mortar-pestle me-3"></i> اكسسوارات المنزل
-                            <span class="float-end"><i class="fa-solid fa-chevron-left"></i> </span></li>
+                            <span class="float-end"><i class="fa-solid fa-chevron-left"></i> </span>
+                        </li>
                         <li class="list-group-item"> <i class="fa-solid fa-mortar-pestle me-3"></i> مستلزمات رياضية
-                            <span class="float-end"><i class="fa-solid fa-chevron-left"></i> </span></li>
+                            <span class="float-end"><i class="fa-solid fa-chevron-left"></i> </span>
+                        </li>
 
                     </ul>
                     <ul class="list-group Three">
@@ -436,7 +438,7 @@
                 <div class="col-10 NavParts">
                     <ul class="list-group list-group-horizontal">
                         <li class="list-group-item withBorder"><a href="category.html"> جميع الأقسام </a></li>
-                        <li class="list-group-item withBorder"><a href="category.html">الماركات<a></li>
+                        <li class="list-group-item withBorder"><a href="Brand.html">الماركات<a></li>
                         <li class="list-group-item"><a href="category.html">العروض</a></li>
                     </ul>
                 </div>
@@ -1404,110 +1406,128 @@
     <!--End ProductCarousel -->
 
 
-    <!--footer-->
-    <footer>
-        <div class="top-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <h3>
-                            ليش تختارنا
-                        </h3>
-                        <ul class="list-unstyled contact-us">
-                            <li>
-                                <div class="icons">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                </div>
-                                الامارات العربية المتحدة في منطقة بن راشد
-                            </li>
-                            <li>
-                                <div class="icons">
-                                    <i class="fa fa-phone" aria-hidden="true"></i>
-                                </div>
-                                81/252142
-                            </li>
-                            <li>
-                                <div class="icons">
-                                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                                </div>
-                                Doryy.Nehme@gmail.com
-                            </li>
-                        </ul>
+      <!--footer-->
+      <footer class="footer mt-3 ">
+        <div class="whyUs mb-5 text-center p-4 pt-2">
+            <div class="blueLine">
+                <h3 class="mb-0">ليش تختارنا؟</h3>
+            </div>
+            <div class="FooterCards mx-auto mt-5">
+                <div class="card-group">
+                    <div class="card">
+                        <img src="images/Footer card 1.png" alt="">
                     </div>
-                    <div class="col-md-4">
-                        <h3>
-                            هل تختاج المساعدة؟
-                        </h3>
-
-                        <ul class="social list-inline">
-                            <li class="list-inline-item">
-                                <a href="" class="facebook">
-                                    <i class="fab fa-facebook-f fa-2x"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="" class="twitter">
-                                    <i class="fab fa-twitter fa-2x"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="" class="pinterest">
-                                    <i class="fab fa-pinterest fa-2x"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="" class="instagram">
-                                    <i class="fab fa-instagram fa-2x"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="" class="linkedin">
-                                    <i class="fab fa-linkedin-in fa-2x"></i>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="card">
+                        <img src="images/Footer card 2.png" alt="">
                     </div>
-
-                    <div class="col-md-4">
-                        <h3>
-                            تابعنا !
-                        </h3>
-
-                        <ul class="social list-inline">
-                            <li class="list-inline-item">
-                                <a href="" class="facebook">
-                                    <i class="fab fa-facebook-f fa-2x"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="" class="twitter">
-                                    <i class="fab fa-twitter fa-2x"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="" class="pinterest">
-                                    <i class="fab fa-pinterest fa-2x"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="" class="instagram">
-                                    <i class="fab fa-instagram fa-2x"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="" class="linkedin">
-                                    <i class="fab fa-linkedin-in fa-2x"></i>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="card">
+                        <img src="images/Footer card 3.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="copyright text-center">
-            <p>
-                جميع الحقوق محفوظة
-            </p>
+        <div class="youNeedHelp text-center">
+            <div class="blueLine py-3">
+                <h5 class="mb-0">هل تحتاج المساعدة؟</h5>
+            </div>
+            <div class="FooterServices pt-3 pb-2">
+                <div class="container-fluid">
+                    <div class="card-group mt-5">
+                        <div class="card">
+                            <a href="#">
+                                <div class="FooterServicesImage">
+
+                                    <img src="images/howToOrder.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+
+                                    <h5 class="card-title">كيفية الطلب</h5>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card">
+                            <div class="FooterServicesImage">
+                                <a href="#">
+                                    <img src="images/Delivery.png" class="card-img-top" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">التوصيل و الشحن</h5>
+                            </div>
+                            </a>
+                        </div>
+                        <div class="card">
+                            <a href="#">
+                                <div class="FooterServicesImage ">
+                                    <div class="FooterServicesImage">
+
+                                        <img src="images/Exchange.png" class="card-img-top" alt="...">
+                                    </div>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">الإستبدال والإسترجاع</h5>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card">
+                            <a href="#">
+                                <div class="FooterServicesImage">
+                                    <img src="images/email.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">البريد الألكتروني</h5>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card">
+                            <a href="#">
+                                <div class="FooterServicesImage">
+                                    <img src="images/phone.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">الإتصال </h5>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="SocialMediaIcons py-5 mt-5">
+            <div class="container">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link " href="#"><i class="fa-brands fa-tiktok"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    </li>
+                </ul>
+                <br>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link " href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-brands fa-youtube"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-brands fa-snapchat"></i></a>
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
+        <div class="copyRight">
+            كل الحقوق محفوظة
+            <br>
+            متجر ياقوت
         </div>
     </footer>
     <!--ENd FOoter-->
@@ -1516,5 +1536,6 @@
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="assets/js/bootstrap.js"></script>
 <script src="assets/js/all.js"></script>
+<script src="js/js.js"></script>
 
 </html>
