--- a/product.html
+++ b/product.html
@@ -1449,77 +1449,79 @@
                     <div class="card-group mt-5">
                         <div class="row">
                             <div class="col-md-1 col-0"></div>
-                        <div class="col-md-2 col-6">
-                            <div class="card">
-                                <a href="#">
-                                    <div class="FooterServicesImage">
-
-                                        <img src="images/howToOrder.png" class="card-img-top" alt="...">
-                                    </div>
-                                    <div class="card-body">
-
-                                        <h6 class="card-title">كيفية الطلب</h6>
-                                    </div>
-                                </a>
-                            </div>
-                            </div>
-                            <div class="col-md-2  col-6">
-
-                            <div class="card">
-                                <a href="#">
-                                <div class="FooterServicesImage">
-                                   
-                                        <img src="images/Delivery.png" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h6 class="card-title">التوصيل و الشحن</h6>
-                                </div>
-                                </a>
-                            </div>
-                            </div>
-                            <div class="col-md-2  col-6">
-                            <div class="card">
-                                <a href="#">
-                                    <div class="FooterServicesImage ">
+                            <div class="col-md-2 col-6">
+                                <div class="card">
+                                    <a href="#">
                                         <div class="FooterServicesImage">
 
-                                            <img src="images/Exchange.png" class="card-img-top" alt="...">
+                                            <img src="images/howToOrder.png" class="card-img-top" alt="...">
                                         </div>
-                                    </div>
-                                    <div class="card-body">
-                                        <h6 class="card-title">الإستبدال والإسترجاع</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-2  col-6">
-                            <div class="card">
-                                <a href="#">
-                                    <div class="FooterServicesImage">
-                                        <img src="images/email.png" class="card-img-top" alt="...">
-                                    </div>
-                                    <div class="card-body">
-                                        <h6 class="card-title">البريد الألكتروني</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-3 d-md-none d-block"></div>
-                        <div class="col-md-2  col-6">
-                            <div class="card">
-                                <a href="#">
-                                    <div class="FooterServicesImage">
-                                        <img src="images/phone.png" class="card-img-top" alt="...">
-                                    </div>
-                                    <div class="card-body">
-                                        <h6 class="card-title">الإتصال </h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-3  d-md-none d-block"></div>
+                                        <div class="card-body">
 
-                        <div class="col-md-1  d-md-block d-none"></div>
+                                            <h6 class="card-title">كيفية الطلب</h6>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-2  col-6">
+
+                                <div class="card">
+                                    <a href="#">
+                                        <div class="FooterServicesImage">
+
+                                            <img src="images/Delivery.png" class="card-img-top" alt="...">
+                                        </div>
+                                        <div class="card-body">
+                                            <h6 class="card-title">التوصيل و الشحن</h6>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-2  col-6">
+                                <div class="card">
+                                    <a href="#">
+                                        <div class="FooterServicesImage ">
+                                           <a href="refund.html">
+                                            <div class="FooterServicesImage">
+
+                                                <img src="images/Exchange.png" class="card-img-top" alt="...">
+                                            </div>
+                                        </div>
+                                        <div class="card-body">
+                                            <h6 class="card-title">الإستبدال والإسترجاع</h6>
+                                        </div>
+                                    </a>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-2  col-6">
+                                <div class="card">
+                                    <a href="#">
+                                        <div class="FooterServicesImage">
+                                            <img src="images/email.png" class="card-img-top" alt="...">
+                                        </div>
+                                        <div class="card-body">
+                                            <h6 class="card-title">البريد الألكتروني</h6>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-3 d-md-none d-block"></div>
+                            <div class="col-md-2  col-6">
+                                <div class="card">
+                                    <a href="#">
+                                        <div class="FooterServicesImage">
+                                            <img src="images/phone.png" class="card-img-top" alt="...">
+                                        </div>
+                                        <div class="card-body">
+                                            <h6 class="card-title">الإتصال </h6>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-3  d-md-none d-block"></div>
+
+                            <div class="col-md-1  d-md-block d-none"></div>
 
                         </div>
 
