--- a/category.html
+++ b/category.html
@@ -2088,8 +2088,8 @@
     </section>
 
 
-    <!--footer-->
-    <footer class="footer mt-3 ">
+     <!--footer-->
+     <footer class="footer mt-3 ">
         <div class="whyUs mb-5 text-center p-4 pt-2">
             <div class="blueLine">
                 <h3 class="mb-0">ليش تختارنا؟</h3>
@@ -2164,6 +2164,7 @@
                                 <div class="card">
                                     <a href="#">
                                         <div class="FooterServicesImage ">
+                                           <a href="refund.html">
                                             <div class="FooterServicesImage">
 
                                                 <img src="images/Exchange.png" class="card-img-top" alt="...">
@@ -2172,6 +2173,7 @@
                                         <div class="card-body">
                                             <h6 class="card-title">الإستبدال والإسترجاع</h6>
                                         </div>
+                                    </a>
                                     </a>
                                 </div>
                             </div>
