--- a/refund.html
+++ b/refund.html
@@ -557,8 +557,8 @@
     </section>
 
 
-    <!--footer-->
-    <footer class="footer mt-3 ">
+       <!--footer-->
+       <footer class="footer mt-3 ">
         <div class="whyUs mb-5 text-center p-4 pt-2">
             <div class="blueLine">
                 <h3 class="mb-0">ليش تختارنا؟</h3>
@@ -633,6 +633,7 @@
                                 <div class="card">
                                     <a href="#">
                                         <div class="FooterServicesImage ">
+                                           <a href="refund.html">
                                             <div class="FooterServicesImage">
 
                                                 <img src="images/Exchange.png" class="card-img-top" alt="...">
@@ -641,6 +642,7 @@
                                         <div class="card-body">
                                             <h6 class="card-title">الإستبدال والإسترجاع</h6>
                                         </div>
+                                    </a>
                                     </a>
                                 </div>
                             </div>
