--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     <!--End Offer Carousel 1 -->
 
 
-    <div class="PinkSeperator mb-3 my-4">
+    <div class="PinkSeperator mb-3 my-4 NoAnim">
         <div class="container-fluid">
             <div class="row gx-2">
                 <div class="col-md-4 col-3 PinkLine">
@@ -502,7 +502,7 @@
 
 
     <!--Rounded Carousel 1 -->
-    <section class="RoundedImageCarousel" id="">
+    <section class="RoundedImageCarousel NoAnim" id="">
         <div class="container-fluid">
 
             <div id="RoundedImageCarousel1" class="carousel slide" data-bs-ride="carousel">
@@ -686,7 +686,7 @@
     <!--End Rounded Carousel 1 -->
 
     <!-- 3 cards Part-->
-    <section class="Cards3Part my-5" id="Cards3Part">
+    <section class="Cards3Part my-5 NoAnim" id="Cards3Part">
         <div class="container-fluid">
 
             <div class="row d-md-none d-block">
